styles/components/_header.sass
.clearfix:after
    content: "."
    display: block
    clear: both
    visibility: hidden
    line-height: 0
    height: 0

.clearfix
    display: inline-block

html[xmlns] .clearfix
    display: block

* html .clearfix
    height: 1%

.default-reveal__element, .welcome-message
  display: flex
  flex-direction: row
  justify-content: center
  align-items: center
  .welcome-message
    position: absolute
    top: 0
    overflow: hidden
    height: 100%
    width: 100%
    font-size: 50px
    color: white

.header
  width: 100%
  display: inline-block
  height: 80px
  background-color: transparent
  z-index: 3
  position: absolute
  .menu-wrapper
    padding: 20px
    display: flex
    width: 100%
    flex-direction: row
    justify-content: space-between
    +tablet
      max-width: 1032px
      display: flex
      flex-direction: row
      justify-content: space-between
      margin: 0 auto
      position: relative
      height: 80px
    a
      color: white
      text-decoration: none
    .logo
      height: 40px
      +tablet
        position: absolute
        z-index: 1
        left: 20px
        margin-right: 0
      div
        height: 40px
        svg
          width: 35px
          height: 40px
    .menu
      display: none
      +tablet
        display: inline-block
        text-align: center
        width: 60%
        position: absolute
        z-index: 1
        left: 20%
        padding: 10px 0px
        line-height: 17px
        top: 21px

        .home-menu, .what-we-do-menu, .out-work-menu, .writing-menu
          font-size: 12px
          font-weight: 600
          letter-spacing: 0.9px
          color: white
          margin-right: 40px
          display: inline-block
          text-transform: uppercase
        .writing-menu
          margin-right: 0px
        .social-butons
          display: none

    .get-in-touch
      border: solid 1px #ffffff
      display: inline-block
      padding: 10px 15px
      margin-top: 1px
      margin-right: 20px
      cursor: pointer
      text-transform: uppercase
      font-size: 12px
      font-weight: 600
      line-height: 18px
      letter-spacing: 0.9px
      color: white
      +ease(.2s)
      &:active
        transform: scale(.97)
      +tablet
        float: right
        margin-right: 0px
        position: absolute
        z-index: 1
        right: 20px

    .mobile-menu
      width: 24px
      height: 40px
      display: inline-block
      position: relative
      float: right
      +tablet
        display: none
      &:active
        transform: scale(0.87)
        +ease(0.1s)

      .menu-button-inner:before
        width: 12px
        height: 3px
        border-radius: 2px
        background-color: white
        position: absolute
        content: ''
        top: -9px

      .menu-button-inner
        width: 24px
        height: 3px
        border-radius: 2px
        background-color: white
        position: absolute
        content: ''
        margin: 15px 0px 9px
        top: 4px

      .menu-button-inner:after
        width: 12px
        height: 3px
        border-radius: 2px
        background-color: white
        position: absolute
        content: ''
        top: 9px
        right: 0px

//Revealed menu bar
.form--open
  .block-ref-menu
    opacity: 1 !important

.wrap-buttons
  display: flex
  flex-direction: row
  justify-content: space-between
  +tablet
    display: none
  .menu-for-mobile
    position: fixed
    width: 100vw
    height: 100vh
    top: 0
    right: 0
    opacity: 0
    background: transparent
    z-index: -3
    padding-right: 30px
    display: flex
    flex-direction: column
    align-items: flex-end
    justify-content: center
    +medium-phone
      padding: 0 70px
    a
      color: white
      text-decoration: none
    .logo
      height: 40px
      div
        height: 40px
        svg
          width: 35px
          height: 40px
    .block-ref-menu
      opacity: 0
      @media (max-width: 374px)
        margin-top: 30px
    .home-menu, .what-we-do-menu, .out-work-menu, .writing-menu
      margin-bottom: calc(1rem + 4vw)
      text-decoration: none
      color: white
      font-size: calc(1rem + 4vw)
      font-weight: bold
      line-height: 30px
      text-align: right
      text-transform: uppercase
    .social-butons
      margin-top: calc(2rem + 8vw)
      display: flex
      justify-content: space-between
      flex-direction: row
      width: 100%
      max-width: 230px
    .menu-header
      display: flex
      flex-direction: row
      justify-content: space-between
      padding: 20px
      position: absolute
      top: 0
      left: 0
      width: 100vw
      .menu-close-cross
        position: relative
        width: 40px
        height: 40px
        &:active
          transform: scale(0.87)
          +ease(0.1s)
        &:after, &:before
          position: absolute
          content: ' '
          width: 35px
          height: 1px
          border: 2px solid #ffffff
          top: 20px
          right: 0px
          border-radius: 3px
        &:after
          transform: rotate(45deg)
        &:before
          transform: rotate(135deg)

